# isi-vlm

./: .gitignore  README.md  llava_benchmark.py  pyproject.toml  readme.md  requirements.txt
dash_app/: app.py
dash_app/assets/: files.csv  vlm_dataset.csv
dash_app/utils/: attentions_matrix.py  compute_attention.py  compute_uncertainty.py  google_sheets.py  image_export.py  modeling_llava_next.py  run_llava.py  semantic_entropy.py  set_seed.py
llava/data_utils/: data_utils.py  eval_utils.py  model_utils.py  set_seed.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_mistral.py
llava/model/multimodal_encoder/: builder.py
notebooks/: mmmu_eda.ipynb  mmmu_llava_inference.ipynb
